qbittorrent/40-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: qbittorrent
spec:
  type: NodePort
  selector:
    app: qbittorrent
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
