qbittorrent/60-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qbittorrent
  namespace: qbittorrent
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-signin: https://authelia.sost.ovh/
    nginx.ingress.kubernetes.io/auth-url: http://authelia-service.authelia.svc.cluster.local/api/verify
spec:
  rules:
  - host: qbittorrent.sost.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: qbittorrent
          servicePort: 80
